1) ui refactor 2) start to add additional emergency number

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="back_btn">חזור</string>
     <string name="save_btn">שמור</string>
     <string name="eda_text">EDA Threshold</string>
+    <string name="text_label_media">מדיה</string>
+    <string name="text_label_info">הודעות</string>
+    <string name="text_label_thresholds">התראות</string>
 </resources>
