1) ui refactor 2) bug - crash when data is null 3) new settings page 4) additional number for emergency sms 5) edit sms message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="text_label_media">מדיה</string>
     <string name="text_label_info">הודעות</string>
     <string name="text_label_thresholds">התראות</string>
+    <string name="settings_info">מידע</string>
+    <string name="settings_media">מדיה</string>
 </resources>
